--- a/public/src/index.html
+++ b/public/src/index.html
@@ -97,7 +97,7 @@
         <article class="introduction__content">
           <h1 class="introduction__title">Web Developer</h1>
 
-          <p class="introduction__content">Currently developing clean, modern, responsive, scalable and performant
+          <p class="introduction__content">Currently creating fast, responsive, accessible and secure
             websites and
             applications at <a href="//fluidstudiosltd.com" target="_blank" rel="noopener nofollow" class="link">Fluid
               Studios</a> to help benefit businesses.
@@ -121,27 +121,27 @@
         <article class="skills__layout">
           <article class="skill">
             <h3 class="skill__title">Responsive</h3>
-            <p class="skill__text">I think about how usable an interface is before developing it and offer insightful
-              suggestions when suitable.
+            <p class="skill__text">Every website and application needs to look great on every device, regardless of
+              size, browser or operating system.
             </p>
           </article>
 
           <article class="skill">
             <h3 class="skill__title">Fast</h3>
-            <p class="skill__text">I leverage modern technologies and applications to speed up my already efficient
-              development process.</p>
+            <p class="skill__text">Users don't hang about, so having a lightning fast website or application is vital to
+              success.</p>
           </article>
 
           <article class="skill">
             <h3 class="skill__title">Profitable</h3>
-            <p class="skill__text">I ensure every website and application and their contents is secure, regardless of
-              size or reputation.</p>
+            <p class="skill__text">Having an amazing website will lead to higher conversion rates and ultimately higher
+              revenue.</p>
           </article>
 
           <article class="skill">
             <h3 class="skill__title">Secure</h3>
-            <p class="skill__text">I am aware of how important speed is, so every website or application needs to be
-              lightning fast.</p>
+            <p class="skill__text">Every website and application and their contents need to be inherently secure,
+              regardless of size.</p>
           </article>
 
         </article>
@@ -210,19 +210,20 @@
             <li class="pill">Sass</li>
             <li class="pill">BEM</li>
             <li class="pill">JavaScript</li>
-            <li class="pill">JSON</li>
-            <li class="pill">Schema</li>
+            <li class="pill">React</li>
             <li class="pill">Next</li>
             <li class="pill">Node</li>
             <li class="pill">PHP</li>
             <li class="pill">MySQL</li>
             <li class="pill">Apache</li>
             <li class="pill">Docker</li>
+            <li class="pill">JSON</li>
+            <li class="pill">Schema</li>
             <li class="pill">NPM</li>
             <li class="pill">Git</li>
             <li class="pill">Gulp</li>
             <li class="pill">Webpack</li>
-            <li class="pill">CMS Systems</li>
+            <li class="pill">CMSs</li>
           </ul> and
           the ability to learn others.</p>
       </article>
@@ -245,10 +246,8 @@
           <ul class="pills">
             <li class="pill">Windows</li>
             <li class="pill">Linux</li>
-            <li class="pill">Powershell</li>
             <li class="pill">FTP</li>
             <li class="pill">SSH</li>
-            <li class="pill">SSR</li>
             <li class="pill">Servers</li>
             <li class="pill">Hosting</li>
             <li class="pill">Domains</li>
@@ -256,29 +255,25 @@
             <li class="pill">APIs</li>
             <li class="pill">CDNs</li>
             <li class="pill">Caching</li>
-            <li class="pill">SSL</li>
-            <li class="pill">VPS</li>
-            <li class="pill">Security</li>
-            <li class="pill">Performance</li>
-            <li class="pill">Accessibility</li>
+            <li class="pill">Deployment</li>
+            <li class="pill">SSLs</li>
+            <li class="pill">VPSs</li>
             <li class="pill">Dedicated Servers</li>
-            <li class="pill">UI/UX</li>
+            <li class="pill">UI</li>
+            <li class="pill">UX</li>
             <li class="pill">Technical SEO</li>
             <li class="pill">Google Analytics</li>
-            <li class="pill">Remote Access</li>
             <li class="pill">Documentation</li>
           </ul>
           and more.</p>
 
         <p class="content__text">I am also practiced in using industry leading applications such as
           <ul class="pills">
+            <li class="pill">Visual Studio Code</li>
             <li class="pill">Slack</li>
             <li class="pill">Asana</li>
-            <li class="pill">Visual Studio Code</li>
-            <li class="pill">Adobe XD</li>
             <li class="pill">Postman</li>
-            <li class="pill">Breathe</li>
-            <li class="pill">Xero</li>
+            <li class="pill">Adobe XD</li>
           </ul>
           and more.</p>
       </article>
