--- a/public/src/index.html
+++ b/public/src/index.html
@@ -9,21 +9,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- SEO start. -->
   <meta name="description"
-    content="An experienced web developer creating clean, modern, responsive, scalable and performant websites and applications to help benefit businesses.">
+    content="Experienced Web Developer creating fast, responsive, accessible and secure websites and applications websites and applications to help benefit businesses.">
   <link rel="canonical" href="https://www.louisyoung.co.uk">
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Web Developer - Bespoke Website Development | Louis Young">
   <meta property="og:title" content="Louis Young - Web Developer">
   <meta property="og:url" content="https://www.louisyoung.co.uk">
   <meta property="og:description"
-    content="An experienced web developer creating clean, modern, responsive, scalable and performant websites and applications to help benefit businesses.">
+    content="Experienced Web Developer creating fast, responsive, accessible and secure websites and applications websites and applications to help benefit businesses.">
   <meta property="og:image"
     content="https://www.louisyoung.co.uk/assets/images/illustrations/full-stack-web-developer.svg">
   <meta name="twitter:site" content="https://www.louisyoung.co.uk">
   <meta name="twitter:title" content="Louis Young - Web Developer">
   <meta name="twitter:url" content="https://www.louisyoung.co.uk">
   <meta name="twitter:description"
-    content="An experienced web developer creating clean, modern, responsive, scalable and performant websites and applications to help benefit businesses.">
+    content="Experienced Web Developer creating fast, responsive, accessible and secure websites and applications to help benefit businesses.">
   <meta name="twitter:image"
     content="https://www.louisyoung.co.uk/assets/images/illustrations/full-stack-web-developer.svg">
   <!-- SEO end. -->
