--- a/public/src/index.html
+++ b/public/src/index.html
@@ -171,7 +171,7 @@
 
       <figure class="project">
         <a href="#!" class="project__link">
-          <img loading="lazy" src="https://danielkorpai.com/dist/img/dribbble/landing-page-template.png"
+          <img loading="lazy" size="600x430" src="https://danielkorpai.com/dist/img/dribbble/landing-page-template.png"
             alt="Web Development Project" class="project__preview">
         </a>
       </figure>
@@ -194,7 +194,7 @@
 
       <figure>
         <img src="./assets/images/illustrations/website-developer-experience.svg" alt="Web Development and Design"
-          class="content__image" loading="lazy">
+          class="content__image" loading="lazy" size="275x215">
       </figure>
 
       <article class="content__content">
@@ -234,7 +234,7 @@
 
       <figure class="content__illustration">
         <img src="./assets/images/illustrations/web-design-development.svg" alt="Website Developer Experience"
-          class="content__image" loading="lazy">
+          class="content__image" loading="lazy" size="275x215">
       </figure>
 
       <article class="content__content">
