Adding better attributes to images

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -106,7 +106,7 @@
         </article>
 
         <img src="./assets/images/illustrations/full-stack-web-developer.svg" alt="Full Stack Web Developer"
-          class="introduction__illustration">
+          title="Full Stack Web Developer" class="introduction__illustration">
       </article>
     </section>
 
@@ -172,7 +172,7 @@
       <figure class="project">
         <a href="#!" class="project__link">
           <img loading="lazy" size="600x430" src="https://danielkorpai.com/dist/img/dribbble/landing-page-template.png"
-            alt="Web Development Project" class="project__preview">
+            alt="Web Development Project" title="Web Development Project" class="project__preview">
         </a>
       </figure>
 
@@ -194,7 +194,7 @@
 
       <figure>
         <img src="./assets/images/illustrations/website-developer-experience.svg" alt="Web Development and Design"
-          class="content__image" loading="lazy" size="275x215">
+          title="Web Development and Design" class="content__image" loading="lazy" size="275x215">
       </figure>
 
       <article class="content__content">
@@ -234,7 +234,7 @@
 
       <figure class="content__illustration">
         <img src="./assets/images/illustrations/web-design-development.svg" alt="Website Developer Experience"
-          class="content__image" loading="lazy" size="275x215">
+          title="Website Developer Experience" class="content__image" loading="lazy" size="275x215">
       </figure>
 
       <article class="content__content">
@@ -316,11 +316,11 @@
 
       <article class="socials">
         <a href="//github.com/louis-young"><img src="./assets/images/icons/socials/github.svg" alt="Github"
-            class="socials__icon"></a>
+            title="Github" class="socials__icon" loading="lazy" size="20x20"></a>
         <a href="//twitter.com/louisryoungg"><img src="./assets/images/icons/socials/twitter.svg" alt="Twitter"
-            class="socials__icon"></a>
+            title="Twitter" class="socials__icon" loading="lazy" size="20x20"></a>
         <a href="//linkedin.com/in/louis-r-young"><img src="./assets/images/icons/socials/linkedin.svg" alt="LinkedIn"
-            class="socials__icon"></a>
+            title="LinkedIn" class="socials__icon" loading="lazy" size="20x20"></a>
       </article>
     </section>
   </footer>
