--- a/public/src/index.html
+++ b/public/src/index.html
@@ -92,7 +92,7 @@
 
   <main>
     <section class="introduction page__section">
-      <article class="introduction__layout container" data-aos="zoom-in-up" data-aos-duration="2000">
+      <article class="introduction__layout container" data-aos="fade-up" data-aos-duration="2000">
 
         <article class="introduction__content">
           <h1 class="introduction__title">Web Developer</h1>
@@ -114,7 +114,7 @@
 
     <hr class="separator">
 
-    <section class="skills section page__section" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="500">
+    <section class="skills section page__section" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="250">
       <article class="skills__inner container">
         <h2 class="skills__title">Expertise</h2>
 
@@ -153,7 +153,7 @@
     <hr class="separator">
 
     <section class="projects section container page__section" data-aos="fade-up" data-aos-duration="2000"
-      data-aos-delay="1000">
+      data-aos-delay="500">
 
       <figure class="project">
         <a href="#!" class="project__link">
@@ -190,7 +190,7 @@
     <hr class="separator">
 
     <section class="content section container page__section" data-aos="fade-up" data-aos-duration="2000"
-      data-aos-delay="1000">
+      data-aos-delay="250">
 
       <figure>
         <img src="./assets/images/illustrations/website-developer-experience.svg" alt="Web Development and Design"
@@ -230,7 +230,7 @@
     </section>
 
     <section class="content content--reverse section container" data-aos="fade-up" data-aos-duration="2000"
-      data-aos-delay="1000">
+      data-aos-delay="250">
 
       <figure class="content__illustration">
         <img src="./assets/images/illustrations/web-design-development.svg" alt="Website Developer Experience"
@@ -284,7 +284,7 @@
     <hr class="separator">
 
     <section class="contact container section page__section" data-aos="fade-up" data-aos-duration="2000"
-      data-aos-delay="1000">
+      data-aos-delay="500">
       <article>
         <h2 class="contact__title">Let's talk</h2>
 
