--- a/public/src/index.html
+++ b/public/src/index.html
@@ -156,33 +156,32 @@
       data-aos-delay="500">
 
       <figure class="project">
-        <a href="#!" class="project__link">
-          <video autoplay muted loop playsinline class="project__preview"
-            src="https://danielkorpai.com/dist/img/dribbble/finder-for-ipad-concept-full.mp4"></video>
-        </a>
-      </figure>
-
-      <figure class="project">
-        <a href="#!" class="project__link">
-          <video autoplay muted loop playsinline class="project__preview"
-            src="https://danielkorpai.com/dist/img/dribbble/finder-for-ipad-pro-multitasking.mp4"></video>
-        </a>
-      </figure>
-
-      <figure class="project">
-        <a href="#!" class="project__link">
-          <img loading="lazy" size="600x430" src="https://danielkorpai.com/dist/img/dribbble/landing-page-template.png"
+        <a href="//app.louisyoung.co.uk/word-counter" class="project__link">
+          <img loading="lazy" size="600x430" src="./assets/images/projects/word-counter.jpg"
             alt="Web Development Project" title="Web Development Project" class="project__preview">
         </a>
       </figure>
 
       <figure class="project">
-        <a href="#!" class="project__link">
-          <video autoplay muted loop playsinline class="project__preview"
-            src="https://danielkorpai.com/dist/img/dribbble/photography-portfolio-concept.mp4"></video>
+        <a href="//app.louisyoung.co.uk/word-counter" class="project__link">
+          <img loading="lazy" size="600x430" src="./assets/images/projects/word-counter.jpg"
+            alt="Web Development Project" title="Web Development Project" class="project__preview">
         </a>
       </figure>
 
+      <figure class="project">
+        <a href="//app.louisyoung.co.uk/word-counter" class="project__link">
+          <img loading="lazy" size="600x430" src="./assets/images/projects/word-counter.jpg"
+            alt="Web Development Project" title="Web Development Project" class="project__preview">
+        </a>
+      </figure>
+
+      <figure class="project">
+        <a href="//app.louisyoung.co.uk/word-counter" class="project__link">
+          <img loading="lazy" size="600x430" src="./assets/images/projects/word-counter.jpg"
+            alt="Web Development Project" title="Web Development Project" class="project__preview">
+        </a>
+      </figure>
     </section>
 
     <hr class="anchor" id="about">
