Starting dark mode

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -60,7 +60,7 @@
   <!-- Schema end. -->
 </head>
 
-<body class="page">
+<body class="page theme theme--default">
 
   <header class="header">
     <section class="header__layout container">
@@ -90,7 +90,7 @@
     </section>
   </header>
 
-  <main>
+  <main class="background">
     <section class="introduction page__section">
       <article class="introduction__layout container" data-aos="fade-up" data-aos-duration="2000">
 
@@ -202,29 +202,29 @@
         <p class="content__text">I specialise in creating performant, responsive, secure and accessible websites and
           applications. </p>
 
-        <p class="content__text">Technologies I'm comfortable working with include but are not limited to <ul
-            class="pills">
-            <li class="pill">HTML5</li>
-            <li class="pill">CSS3</li>
-            <li class="pill">Sass</li>
-            <li class="pill">BEM</li>
-            <li class="pill">JavaScript</li>
-            <li class="pill">React</li>
-            <li class="pill">Next</li>
-            <li class="pill">Node</li>
-            <li class="pill">PHP</li>
-            <li class="pill">MySQL</li>
-            <li class="pill">Apache</li>
-            <li class="pill">Docker</li>
-            <li class="pill">JSON</li>
-            <li class="pill">Schema</li>
-            <li class="pill">NPM</li>
-            <li class="pill">Git</li>
-            <li class="pill">Gulp</li>
-            <li class="pill">Webpack</li>
-            <li class="pill">CMSs</li>
-          </ul> and
-          the ability to learn others.</p>
+        <p class="content__text">Technologies I'm comfortable working with include but are not limited to</p>
+        <ul class="pills">
+          <li class="pill">HTML5</li>
+          <li class="pill">CSS3</li>
+          <li class="pill">Sass</li>
+          <li class="pill">BEM</li>
+          <li class="pill">JavaScript</li>
+          <li class="pill">React</li>
+          <li class="pill">Next</li>
+          <li class="pill">Node</li>
+          <li class="pill">PHP</li>
+          <li class="pill">MySQL</li>
+          <li class="pill">Apache</li>
+          <li class="pill">Docker</li>
+          <li class="pill">JSON</li>
+          <li class="pill">Schema</li>
+          <li class="pill">NPM</li>
+          <li class="pill">Git</li>
+          <li class="pill">Gulp</li>
+          <li class="pill">Webpack</li>
+          <li class="pill">CMSs</li>
+        </ul>
+        <p class="content__text"> and the ability to learn others.</p>
       </article>
     </section>
 
@@ -241,40 +241,41 @@
 
         <p class="content__text">I have experience working as an industry professional and am an excellent communicator
           having worked in teams
-          with knowledge of
-          <ul class="pills">
-            <li class="pill">Windows</li>
-            <li class="pill">Linux</li>
-            <li class="pill">FTP</li>
-            <li class="pill">SSH</li>
-            <li class="pill">Servers</li>
-            <li class="pill">Hosting</li>
-            <li class="pill">Domains</li>
-            <li class="pill">DNS</li>
-            <li class="pill">APIs</li>
-            <li class="pill">CDNs</li>
-            <li class="pill">Caching</li>
-            <li class="pill">Deployment</li>
-            <li class="pill">SSLs</li>
-            <li class="pill">VPSs</li>
-            <li class="pill">Dedicated Servers</li>
-            <li class="pill">UI</li>
-            <li class="pill">UX</li>
-            <li class="pill">Technical SEO</li>
-            <li class="pill">Google Analytics</li>
-            <li class="pill">Documentation</li>
-          </ul>
-          and more.</p>
+          with knowledge of </p>
+        <ul class="pills">
+          <li class="pill">Windows</li>
+          <li class="pill">Linux</li>
+          <li class="pill">FTP</li>
+          <li class="pill">SSH</li>
+          <li class="pill">Servers</li>
+          <li class="pill">Hosting</li>
+          <li class="pill">Domains</li>
+          <li class="pill">DNS</li>
+          <li class="pill">APIs</li>
+          <li class="pill">CDNs</li>
+          <li class="pill">Caching</li>
+          <li class="pill">Deployment</li>
+          <li class="pill">SSLs</li>
+          <li class="pill">VPSs</li>
+          <li class="pill">Dedicated Servers</li>
+          <li class="pill">UI</li>
+          <li class="pill">UX</li>
+          <li class="pill">Technical SEO</li>
+          <li class="pill">Google Analytics</li>
+          <li class="pill">Documentation</li>
+        </ul>
 
-        <p class="content__text">I am also practiced in using industry leading applications such as
-          <ul class="pills">
-            <li class="pill">Visual Studio Code</li>
-            <li class="pill">Slack</li>
-            <li class="pill">Asana</li>
-            <li class="pill">Postman</li>
-            <li class="pill">Adobe XD</li>
-          </ul>
-          and more.</p>
+        <p class="content__text">and more.</p>
+
+        <p class="content__text">I am also practiced in using industry leading applications such as</p>
+        <ul class="pills">
+          <li class="pill">Visual Studio Code</li>
+          <li class="pill">Slack</li>
+          <li class="pill">Asana</li>
+          <li class="pill">Postman</li>
+          <li class="pill">Adobe XD</li>
+        </ul>
+        <p class="content__text">and more.</p>
       </article>
     </section>
 
@@ -323,6 +324,14 @@
       </article>
     </section>
   </footer>
+
+  <div class="theme-switch-wrapper">
+    <label class="theme-switch" for="checkbox">
+      <input type="checkbox" id="checkbox" />
+      <div class="slider round"></div>
+    </label>
+    <em>Enable Dark Mode!</em>
+  </div>
 
   <section class="fallback">
     <article class="fallback__content container">
