Changing theme name

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -60,7 +60,7 @@
   <!-- Schema end. -->
 </head>
 
-<body class="page theme theme--default">
+<body class="page theme theme--light">
 
   <header class="header">
     <section class="header__layout container">
