Add navigation underlay

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -90,6 +90,8 @@
     </section>
   </header>
 
+  <section class="underlay"></section>
+
   <main class="background">
     <section class="introduction page__section">
       <article class="introduction__layout container" data-aos="fade-up" data-aos-duration="2000">
