--- a/public/src/index.html
+++ b/public/src/index.html
@@ -7,6 +7,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="author" href="humans.txt" />
   <!-- SEO start. -->
   <meta name="description"
     content="Experienced Web Developer creating fast, responsive, accessible and secure websites and applications websites and applications to help benefit businesses.">
