Update title and alt attributes

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -161,8 +161,8 @@
       <figure class="project">
         <a href="//app.louisyoung.co.uk/word-counter" class="project__link" target="_blank"
           rel="noopener nofollow noreferrer">
-          <img loading="lazy" size="600x430" src="./assets/images/projects/word-counter.jpg"
-            alt="Web Development Project" title="Web Development Project" class="project__preview">
+          <img loading="lazy" size="600x430" src="./assets/images/projects/word-counter.jpg" alt="Word Counter"
+            title="Word Counter" class="project__preview">
         </a>
       </figure>
 
