--- a/public/src/index.html
+++ b/public/src/index.html
@@ -81,6 +81,9 @@
           <li class="navigation__item"><a href="#skills" class="navigation__link header__link">Skills</a>
           <li class="navigation__item"><a href="#work" class="navigation__link header__link">Work</a></li>
           <li class="navigation__item"><a href="#about" class="navigation__link header__link">About</a></li>
+          <li class="navigation__item"><a href="/web-development-blog"
+              class="navigation__link navigation__link--icon header__link" target="_blank" rel="noopener">Blog <img
+                src="./assets/images/icons/menu/external.svg" alt="Open" class="navigation__icon"></a></li>
         </ul>
         <a href="#contact" class="header__button header__button--small header__link button">Contact</a>
       </nav>
@@ -102,7 +105,8 @@
 
           <p class="introduction__content">Currently creating fast, responsive, accessible and secure
             websites and
-            applications at <a href="//fluidstudiosltd.com" target="_blank" rel="noopener nofollow" class="link">Fluid
+            applications at <a href="//fluidstudiosltd.com" target="_blank" rel="noopener nofollow noreferrer"
+              class="link">Fluid
               Studios</a> to help benefit businesses.
           </p>
           <a href="#work" class="button">See my Work</a>
@@ -123,28 +127,29 @@
 
         <article class="skills__layout">
           <article class="skill">
-            <h3 class="skill__title">Responsive</h3>
-            <p class="skill__text">Every website and application needs to look great on every device, regardless of
-              size, browser or operating system.
+            <h3 class="skill__title">Development</h3>
+            <p class="skill__text">With industry experience under my belt, I'm well practiced in developing fast,
+              responsive, secure
+              and successful websites.
             </p>
           </article>
 
           <article class="skill">
-            <h3 class="skill__title">Fast</h3>
-            <p class="skill__text">Users don't hang about, so having a lightning fast website or application is vital to
-              success.</p>
+            <h3 class="skill__title">User Interface</h3>
+            <p class="skill__text">Having worked with many designers, I can communicate constructive feedback and ensure
+              the best product for the client.</p>
           </article>
 
           <article class="skill">
-            <h3 class="skill__title">Profitable</h3>
-            <p class="skill__text">Having an amazing website will lead to higher conversion rates and ultimately higher
-              revenue.</p>
+            <h3 class="skill__title">User Experience</h3>
+            <p class="skill__text">Having worked on and built a plethora of websites, I know what works and what doesn't
+              for users, and in turn businesses.</p>
           </article>
 
           <article class="skill">
-            <h3 class="skill__title">Secure</h3>
-            <p class="skill__text">Every website and application and their contents need to be inherently secure,
-              regardless of size.</p>
+            <h3 class="skill__title">Search Engine Optimisation</h3>
+            <p class="skill__text">With great understanding of technical on-page SEO, I can ensure a website ranks well
+              and works well for businesses.</p>
           </article>
 
         </article>
@@ -231,7 +236,7 @@
           <li class="pill">Webpack</li>
           <li class="pill">CMSs</li>
         </ul>
-        <p class="content__text"> and the ability to learn others.</p>
+        <p class="content__text"> and the ability to quickly learn others.</p>
       </article>
     </section>
 
@@ -246,8 +251,9 @@
       <article class="content__content">
         <h2 class="content__title">Experience</h2>
 
-        <p class="content__text">I have experience working as an industry professional and am an excellent communicator
-          having worked in teams
+        <p class="content__text">I have experience working as an industry professional and I am an excellent
+          communicator
+          having worked in both small and large teams
           with knowledge of </p>
         <ul class="pills">
           <li class="pill">Windows</li>
@@ -296,12 +302,13 @@
         <h2 class="contact__title">Let's talk</h2>
 
         <p class="contact__text">If you have an idea for a project or you just want to have a chat, please feel free to
-          get in touch with me to see how I can benefit your business.</p>
+          get in touch with me to see how I can help.</p>
 
-        <p class="contact__text">I'm always open to new opportunities, so if you would like to find about more about me
+        <p class="contact__text">I'm always open to great new opportunities, so if you would like to find about more
+          about me
           in a professional capacity please get in touch via any of the methods on my website.</p>
 
-        <p class="contact__text"> Alternatively, send me
+        <p class="contact__text">Alternatively, send me
           an email at <a href="mailto:me@louisyoung.co.uk" class="link">me@louisyoung.co.uk</a>.</p>
       </article>
 
